# tractian_integrations_engineering_technical_test

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.py
__MACOSX/src/: .___init__.py
src/: cleanup_mongo.py  config.py  logger.py  main.py
src/client/: reader.py  writer.py
src/tracOS/: repository.py
src/translator/: mapping.py
tests/: conftest.py  test_e2e.py  test_inbound.py  test_mapping.py  test_outbound.py  test_reader_writer.py  test_repository.py
